[package]
name = "box-self"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/hoyunliu/box-self/"
description = "Easy way to duplicate a new function with self: Box<Self> signature"
license = "MIT OR Apache-2.0"

[dependencies]
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
proc-macro2="1.0.66"

[lib]
path = "src/lib.rs"
proc-macro = true